flux/apps/langfuse/deps/networkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: langfuse-postgres
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: pg-langfuse
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
            app.kubernetes.io/name: langfuse
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: obs-collect
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: langfuse-valkey
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: langfuse-valkey
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
            app.kubernetes.io/name: langfuse
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
  enableDefaultDeny:
    egress: true
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: langfuse-clickhouse
spec:
  endpointSelector:
    matchLabels:
      clickhouse.com/role: clickhouse-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
            app.kubernetes.io/name: langfuse
      toPorts:
        - ports:
            - port: "8123"
              protocol: TCP
            - port: "9000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: clickhouse-operator
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
            clickhouse.com/role: clickhouse-server
      toPorts:
        - ports:
            - port: "9001"
              protocol: TCP
            - port: "9002"
              protocol: TCP
            - port: "9009"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9002"
              protocol: TCP
            - port: "9009"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: obs-collect
      toPorts:
        - ports:
            - port: "9363"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
            clickhouse.com/role: clickhouse-keeper
      toPorts:
        - ports:
            - port: "2181"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
            clickhouse.com/role: clickhouse-server
      toPorts:
        - ports:
            - port: "9001"
              protocol: TCP
            - port: "9002"
              protocol: TCP
            - port: "9009"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: langfuse-keeper
spec:
  endpointSelector:
    matchLabels:
      clickhouse.com/role: clickhouse-keeper
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
            clickhouse.com/role: clickhouse-server
      toPorts:
        - ports:
            - port: "2181"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
            clickhouse.com/role: clickhouse-keeper
      toPorts:
        - ports:
            - port: "9234"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: clickhouse-operator
      toPorts:
        - ports:
            - port: "2181"
              protocol: TCP
            - port: "9123"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "2181"
              protocol: TCP
            - port: "9123"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: obs-collect
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
            clickhouse.com/role: clickhouse-keeper
      toPorts:
        - ports:
            - port: "9234"
              protocol: TCP
